Added tracking code

--- a/TODO
+++ b/TODO
@@ -12,3 +12,6 @@ TODO:
     antispam
     password and account management
     user profile
+    draft preview
+    autosave on writing
+    add option for analytics
